CSS/Style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
  }
  
  body {
    font-family: Arial, sans-serif;
  }
  
  main {
    padding: 20px;
    margin-top: 86px;
  }
  
  hr {
    margin-bottom: 10px;
  }
  
  header {
    background-color: #f3f3f3;
    color: #000;
    padding: 20px;
    border: 1px solid #ccc;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1000;
    height: 86px;
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  
  .header-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
  }
  
  .logo {
    display: flex;
    align-items: center;
    gap: 10px;
  }
  
  .logo-1 img,
  .logo-2 img {
    width: 100px;
    max-height: 83px;
    object-fit: contain;
  }
  
  .nav-menu {
    display: flex;
    gap: 0px;
  }
  
  .right-side {
    display: flex;
    gap: 15px;
    align-items: center;
  }
  
  .nav-menu ul {
    list-style-type: none;
    display: flex;
  }
  
  .nav-menu a {
    color: #000;
    text-decoration: none;
    font-size: 16px;
    background-color: #f3f3f3;
    padding: 25px 25px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    transition: background-color 0.3s;
  }
  
  .nav-menu a:hover {
    color: #ff6358;
  }
  
  .nav-menu a:hover::before,
  .nav-menu a.active::before {
    content: "";
    position: absolute;
    top: -9px;
    left: 0;
    width: 100%;
    height: 5px;
    background-color: #ff6348;
  }
  
  .donate-button {
    margin-left: 20px;
  }
  
  .donate-button button {
    background-color: #e04819;
    border: none;
    padding: 13px 18px;
    font-size: 15px;
    cursor: pointer;
    border-radius: 50px;
    transition: all 0.3s ease;
  }
  
  .donate-button button a {
    color: #fff;
    text-decoration: none;
  }
  
  .donate-button button:hover {
    background-color: #ff4500;
    transform: translateY(-5px);
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
  }
  
  .sidebar {
    transform: translateX(-100%);
    transition: transform 0.3s ease;
    position: fixed;
    top: 86px;
    width: 275px;
    background-color: white;
    padding: 10px 20px;
    font-family: Arial, sans-serif;
    z-index: 9999;
  }
  
  .sidebar.active {
    transform: translateX(0);
  }
  
  .sidebar ul {
    list-style: none;
  }
  
  .sidebar ul li a {
    position: relative;
    text-decoration: none;
    color: #8f8fa7;
    font-size: 18px;
    display: block;
    padding: 15px 20px;
    transition: background-color 0.3s ease;
  }
  
  .sidebar ul li a::before {
    content: '';
    position: absolute;
    left: 0;
    top: 0;
    width: 6px;
    height: 100%;
    background-color: #ff6348;
    opacity: 0;
    transition: opacity 0.3s ease;
  }
  
  .sidebar ul li a:hover::before,
  .sidebar ul li a.active::before {
    opacity: 1;
  }
  
  .sidebar ul li a:hover {
    background-color: rgba(250, 191, 180, 0.3);
    color: #ff6348;
  }
  
  .sidebar a:hover img {
    transform: scale(1.2);
  }
  
  .main-content {
    display: flex;
    flex-direction: column;
    padding: 40px 20px;
    margin-top: 86px;
    background-color: white;
    border-top: 1px solid #ddd;
  }
  
  .bottom-content {
    padding: 20px;
    margin-top: 40px;
    background-color: #ff7e4f;
  }
  
  .content-row {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: space-between;
  }
  
  .content-box {
    flex: 1 1 200px;
    min-width: 200px;
  }
  
  .content-box h3 {
    font-size: 18px;
    color: black;
    margin-bottom: 10px;
  }
  
  .content-box ul {
    list-style: none;
    padding: 0;
  }
  
  .content-box ul li {
    color: black;
    font-size: 14px;
    margin-bottom: 6px;
  }
  
  .social-icons {
    display: flex;
    flex-direction: column;
    gap: 10px;
  }
  
  .social-icons a {
    text-decoration: none;
    color: black;
    display: flex;
    align-items: center;
    gap: 10px;
  }
  
  .social-icons a img {
    width: 30px;
    height: 30px;
    transition: transform 0.2s ease;
  }
  
  .social-icons a:hover img {
    transform: scale(1.2);
  }
  
  .main-container {
    width: 90%;
    max-width: 1200px;
    padding: 40px;
    background-color: transparent;
  }
  
  h3 {
    text-align: left;
    margin-bottom: 10px;
    color: #ff6348;
    font-size: 25px;
    max-width: 280px;
  }
  
  h4 {
    text-align: left;
    margin-bottom: 10px;
    color: #333;
    font-size: 12px;
  }
  
  .hamburger {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 50px;
    height: 50px;
    background-color: blue;
    border: none;
    cursor: pointer;
    gap: 6px;
    align-items: center;
    border-radius: 6px;
  }
  
  .hamburger .bar {
    height: 2px;
    width: 18px;
    background-color: white;
    border-radius: 1px;
  }
  

